[package]
name = "piston2d_abstraction"
version = "0.1.3"
edition = "2021"
description = "Object-oriented piston2d abstraction."
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.120.0"
piston2d_abstraction_proc_macros = "0.1.0"

[features]
